--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col">
                     <ol class="playfair breadcrumb">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li class="active">About</li>
                     </ol>
                 </div>
@@ -160,6 +160,7 @@
                         <div class="social">
                             <ul>
                                 <li><a href="https://www.facebook.com/100001196570569"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://wa.me/447708031055?text=Good Day Atef,"><i class="fa fa-whatsapp"></i></a></li>
                             </ul>
                         </div>
                         <div>
@@ -194,7 +195,7 @@
                     <img src="images/logo-alt.png" alt class="img img-responsive">
                     <p>Relieve your pain &amp; unwind in the capable hands of a certified massage therapist</p>
                     <ul class="nav navbar-nav">
-                        <li><a href="https://www.facebook.com/100001196570569"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/100089390262569"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://maps.app.goo.gl/M5ghL8sdjMVjnJ2z5"><i class="fa fa-location-arrow"></i></a></li>
                     </ul>
                 </div> <!-- end of victoria -->
@@ -207,7 +208,7 @@
                         <li>Loudwater</li>
                         <li>High Wycombe HP10 9QL</li>
                         <li><a href="tel:07708031055">077-080-31055</a></li>
-                        <li><a href="mailto:contact@massageuk.com">contact@massageuk.com</a></li>
+                        <li><a href="mailto:contact@massage-uk.uk">contact@massageuk.com</a></li>
                     </ul>
                 </div> <!-- end of footer-about  -->
 
