--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                 <div class="col col-sm-4">
                     <span><i class="flaticon-interface-3"></i></span>
                     <h3>Email</h3>
-                    <p><a href="mailto:info@victoriaresort.com">contact@massageuk.com</a></p>
+                    <p><a href="mailto:info@victoriaresort.com">contact@massage-uk.uk</a></p>
                 </div>
             </div>
             <a href="#" class="make-appointment-btn common-btn btn btn-default">Book now</a>
@@ -113,7 +113,7 @@
                     <p class="playfair">Healthy body, mind, and soul</p>
                     <div>
                         <ul class="social-links">
-                            <li><a href="https://www.facebook.com/100001196570569"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.facebook.com/100089390262569"><i class="fa fa-facebook"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     <img src="images/logo-alt.png" alt class="img img-responsive">
                     <p>Relieve your pain &amp; unwind in the capable hands of a certified massage therapist</p>
                     <ul class="nav navbar-nav">
-                        <li><a href="https://www.facebook.com/100001196570569"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/100089390262569"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://maps.app.goo.gl/M5ghL8sdjMVjnJ2z5"><i class="fa fa-location-arrow"></i></a></li>
                     </ul>
                 </div> <!-- end of victoria -->
@@ -175,7 +175,7 @@
                         <li>Loudwater</li>
                         <li>High Wycombe HP10 9QL</li>
                         <li><a href="tel:07708031055">077-080-31055</a></li>
-                        <li><a href="mailto:contact@massageuk.com">contact@massageuk.com</a></li>
+                        <li><a href="mailto:contact@massage-uk.uk">contact@massage-uk.uk</a></li>
                     </ul>
                 </div> <!-- end of footer-about  -->
 
