--- a/index.html
+++ b/index.html
@@ -107,23 +107,24 @@
 
                 <div class="faeture col col-md-6">
                     <div class="col col-xs-6" id="first-box">
-                        <i class="flaticon-nature-2"></i>
-                        <h3>Therapeutic</h3>
-                        <p>This massage uses special techniques to get rid of painful lactic acid that derives from heavy training or long working hours</p>
+                        <i class="flaticon-gesture"></i>
+                        <h3> Deep Tissue</h3>
+                        <p>Deep tissue massage can be an effective treatment method for various conditions, including sports injuries and back pain</p>&emsp;<br><br>
                     </div>
+
                     <div class="col col-xs-6" id="second-box">
-                        <i class="flaticon-flower"></i>
-                        <h3>Aromatherapy</h3>
-                        <p>The hand movements in combination with the essential oils relive tensions and achieve muscular relative effect on the emotional wellbeing</p>
+                        <i class="flaticon-people"></i>
+                        <h3> Sport</h3>
+                        <p>The main purpose of sport massage therapy is to help alleviate the stress and tension, which builds up in the body's soft tissues during physical activity</p>
                     </div>
                     <div class="col col-xs-6" id="third-box">
-                        <i class="flaticon-two"></i>
-                        <h3>Anti-Cellulite</h3>
-                        <p>Reshape your body with this contouring treatment that assists the reduction of cellulite appearance. It tones, smoothest and refines<br>&ensp;</p>
+                        <i class="flaticon-flower"></i>
+                        <h3> Swedish</h3>
+                        <p>Swedish is an ancient massage therapy, which involves the use of essential oils. These oils are applied to the body in a soft flowing way</p>&emsp;<br>
                     </div>
                     <div class="col col-xs-6" id="fourth-box">
                         <i class="flaticon-three"></i>
-                        <h3>Shiatsu</h3>
+                        <h3> Shiatsu</h3>
                         <p>The shiatsu practitioner uses palm, fingers, thumbs, knuckles, elbows and knees to apply the pressure on the body's acupuncture points and energy channels</p>
                     </div>
                 </div>
@@ -432,7 +433,7 @@
                     <img src="images/logo-alt.png" alt class="img img-responsive">
                     <p>Relieve your pain &amp; unwind in the capable hands of a certified massage therapist</p>
                     <ul class="nav navbar-nav">
-                        <li><a href="https://www.facebook.com/100001196570569"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/100089390262569"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://maps.app.goo.gl/M5ghL8sdjMVjnJ2z5"><i class="fa fa-location-arrow"></i></a></li>
                     </ul>
                 </div> <!-- end of victoria -->
@@ -445,7 +446,7 @@
                         <li>Loudwater</li>
                         <li>High Wycombe HP10 9QL</li>
                         <li><a href="tel:07708031055">077-080-31055</a></li>
-                        <li><a href="mailto:contact@massageuk.com">contact@massageuk.com</a></li>
+                        <li><a href="mailto:contact@massage-uk.uk">contact@massage-uk.uk</a></li>
                     </ul>
                 </div> <!-- end of footer-about  -->
 
