--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="html template">
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
+    <meta name="description" content="Massage Therapist in High Wycombe for Deep Tissue, Sports, Shiatsu Relaxing Aromatherapy Massages. Fully Qualified With 5* Reviews">
     <meta name="keyword" content="your keyword goes to here">
     <meta name="author" content="meselhy">
     <title>Massage UK</title>
+    <link rel="canonical" href="https://massage-uk.uk" />
+    <meta property="og:locale" content="en_GB" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="Massage Therapist | Loudwater High Wycombe Buckinghamshire" />
+	<meta property="og:description" content="Massage Therapist in High Wycombe for Deep Tissue, Sports, Shiatsu Relaxing Aromatherapy Massages. Fully Qualified With 5* Reviews" />
+	<meta property="og:url" content="https://massage-uk.uk" />
+	<meta property="og:site_name" content="Massage UK | High Wycombe" />
     <link href="images/favicon.png" rel="icon">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:800,700,600,300' rel='stylesheet' type='text/css'>
@@ -387,12 +395,12 @@
                         <div>
                             <i class="fa fa-angle-down"></i>
                             <select class="form-control" name="service">
-                                <option value="Sports Massage">Sports Massage</option>
-                                <option value="Shiatsu Massage">Shiatsu Massage</option>
-                                <option value="Anti-Cellulite Massage">Anti-Cellulite Massage</option>
+                                <option value="Sport Massage">Sport Massage</option>
+                                <option value="Swedish Massage">Swedish Massage</option>
                                 <option value="Deep Tissue Massage">Deep Tissue Massage</option>
                                 <option value="Therapeutic and Relaxing Massage">Therapeutic and Relaxing Massage</option>
-                                <option value="Relaxing and Aromatherapy Massage">Relaxing and Aromatherapy Massage</option>
+                                <option value="Anti-Cellulite Massage">Anti-Cellulite Massage</option>
+                                <option value="Shiatsu Massage">Shiatsu Massage</option>
                             </select>
                         </div>
                     </div>
@@ -463,12 +471,12 @@
                 <div class="usefull-links col col-xs-6 col-md-3">
                     <h2>Services</h2>
                     <ul>
-                        <li><a href="service.html#sports">Sports Massage</a></li>
-                        <li><a href="service.html#shiatsu">Shiatsu Massage</a></li>
-                        <li><a href="service.html#cellulite">Anti-Cellulite Massage</a></li>
+                        <li><a href="service.html#sport">Sport Massage</a></li>
+                        <li><a href="service.html#swedish">Swedish Massage</a></li>
                         <li><a href="service.html#deeptissue">Deep Tissue Massage</a></li>
                         <li><a href="service.html#therapeutic">Therapeutic &amp; Relaxing Massage</a></li>
-                        <li><a href="service.html#aromatherapy">Relaxing &amp; Aromatherapy Massage</a></li>
+                        <li><a href="service.html#cellulite">Anti-Cellulite Massage</a></li>
+                        <li><a href="service.html#shiatsu">Shiatsu Massage</a></li>
                     </ul>
                 </div> <!-- end of explore  -->
 
