--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
     <link href="css/jquery.timepicker.min.css" rel="stylesheet">
+    <link rel="manifest" href="manifest.json" />
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
