add appointment link

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div> <!-- end of container -->
     </section> <!-- end of spa-advantages -->
 
-    <section class="news-shop">
+    <section class="news-shop" id="appointment">
         <div class="overlay"></div>
         <h2 class="hidden">What clients say</h2>
         <div class="container">
