--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <p>Relieve your pain &amp; unwind in the capable hands of a certified massage therapist</p>
                     <ul class="nav navbar-nav">
                         <li><a href="https://www.facebook.com/100089390262569"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://maps.app.goo.gl/M5ghL8sdjMVjnJ2z5"><i class="fa fa-location-arrow"></i></a></li>
+                        <li><a href="https://wa.me/447708031055?text=Good Day Atef,"><i class="fa fa-whatsapp"></i></a></li>
                     </ul>
                 </div> <!-- end of victoria -->
 
@@ -459,9 +459,9 @@
                     <h2>About</h2>
                     <ul>
                         <li>Massage UK</li>
-                        <li>Treadaway Ct</li>
-                        <li>Loudwater</li>
-                        <li>High Wycombe HP10 9QL</li>
+                        <li>Kernmantle House</li>
+                        <li>The Roperies</li>
+                        <li>High Wycombe Buckinghamshire, HP13 7FT</li>
                         <li><a href="tel:07708031055">077-080-31055</a></li>
                         <li><a href="mailto:contact@massage-uk.uk">contact@massage-uk.uk</a></li>
                     </ul>
