--- a/service.html
+++ b/service.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
-    <meta name="description" content="Massage Therapist in High Wycombe for Deep Tissue, Sports, Shiatsu Relaxing Aromatherapy Massages. Fully Qualified With 5* Reviews">
-    <meta name="keyword" content="your keyword goes to here">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="description" content="Massage Therapist in High Wycombe, Buckinghamshire offering Deep Tissue, Sports, Shiatsu, and Relaxing Aromatherapy Massages. Fully Qualified with 5* Reviews.">
+    <meta name="keywords" content="massage therapy, therapist, High Wycombe, Buckinghamshire, Relaxing, Aromatherapy, Sports, Deep Tissue">
     <meta name="author" content="meselhy">
-    <title>Services</title>
-    <link rel="canonical" href="https://massage-uk.uk" />
+    <title>Massage UK | Services</title>
+    <link rel="canonical" href="https://massage-uk.uk/" />
     <meta property="og:locale" content="en_GB" />
-	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Massage Therapist | Loudwater High Wycombe Buckinghamshire" />
-	<meta property="og:description" content="Massage Therapist in High Wycombe for Deep Tissue, Sports, Shiatsu Relaxing Aromatherapy Massages. Fully Qualified With 5* Reviews" />
-	<meta property="og:url" content="https://massage-uk.uk" />
-	<meta property="og:site_name" content="Massage UK | High Wycombe" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Massage Therapist | High Wycombe, Buckinghamshire" />
+    <meta property="og:description" content="Massage Therapist in High Wycombe, Buckinghamshire offering Deep Tissue, Sports, Shiatsu, and Relaxing Aromatherapy Massages. Fully Qualified with 5* Reviews." />
+    <meta property="og:url" content="https://massage-uk.uk/" />
     <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
