--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
     <section class="map">
         <h2 class="hidden">Map</h2>
         <div id="">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2477.975991197314!2d-0.7003208999999999!3d51.6053285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766db3d28ab065%3A0x17f656a63a65571b!2sAtef%20Massage!5e0!3m2!1sen!2suk!4v1716393912211!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d604.4518608744302!2d-0.724974320468186!3d51.62454639201568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766db3d28ab065%3A0x17f656a63a65571b!2sMassage-UK!5e0!3m2!1sen!2seg!4v1727019250317!5m2!1sen!2seg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div> <!-- google map -->
     </section> <!-- end of map -->
 
