--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
     </script>
     <script src="js/index-script.js"></script>
     <script>
-        if (typeof navigator.serviceWorker !== 'undefined') {
-          navigator.serviceWorker.register('sw.js')
-        }
+    //    if (typeof navigator.serviceWorker !== 'undefined') {
+    //      navigator.serviceWorker.register('sw.js')
+    //    }
       </script>
       
 </body>
