Update price in form

--- a/about.html
+++ b/about.html
@@ -290,12 +290,12 @@
                         <div>
                             <i class="fa fa-angle-down"></i>
                             <select class="form-control" name="service">
-                                <option value="Sport Massage">Sport Massage</option>
-                                <option value="Swedish Massage">Swedish Massage</option>
-                                <option value="Deep Tissue Massage">Deep Tissue Massage</option>
-                                <option value="Therapeutic and Relaxing Massage">Therapeutic and Relaxing Massage</option>
-                                <option value="Anti-Cellulite Massage">Anti-Cellulite Massage</option>
-                                <option value="Shiatsu Massage">Shiatsu Massage</option>
+                                <option value="Sport Massage">Sport Massage £50</option>
+                                <option value="Swedish Massage">Swedish Massage £50</option>
+                                <option value="Deep Tissue Massage">Deep Tissue Massage £50</option>
+                                <option value="Therapeutic and Relaxing Massage">Therapeutic and Relaxing Massage £50</option>
+                                <option value="Anti-Cellulite Massage">Anti-Cellulite Massage £50</option>
+                                <option value="Shiatsu Massage">Shiatsu Massage £50</option>
                             </select>
                         </div>
                     </div>
